<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_toolbar_mess"
        android:paddingLeft="12dp"
        android:paddingTop="15dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/nav_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="3dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/circleAvatar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circle"
                    app:srcCompat="@drawable/img" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/bg_activity_mes"
                    android:translationX="-1dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizePresetSizes="@array/text_sizes"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="left|top"
                    android:maxLines="1"
                    android:text="@string/txt_name_default"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvName"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="3dp"
                    android:autoSizePresetSizes="@array/text_sizes_message_activity"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/txt_active_now"
                    android:textColor="#7B7B7D" />


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgCallMic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/ic_call" />

        <ImageView
            android:id="@+id/imgVideoCall"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:src="@drawable/ic_callvideo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:itemCount="1"
            tools:listitem="@layout/item_layout_message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTyping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rcvSugessMess"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTyping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/txt_typing_message"
            android:textColor="#7B7B7D"
            android:textSize="15sp" />

        <com.lutech.potmanprankcall.view.Typewriter
            android:id="@+id/typewriter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="#7B7B7D"
            android:textSize="15sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSugessMess"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorMess"
        android:fadeScrollbars="false"
        android:foregroundGravity="center"
        android:scrollbarSize="5dp"
        android:scrollbars="horizontal" />


</LinearLayout>